# systemd-minecraft

./: .travis.yml  Cargo.toml  README.md  minecraft.py  minecraft.service  minecraft@.service  requirements.txt  setup.py  version.py
assets/: systemd-minecraft.default.json  systemd-minecraft.dev.default.json
minecraft/: __init__.py  version.py
src/: launcher_data.rs  lib.rs  main.rs  util.rs
