[package]
name = "minecraft"
version = "6.1.3"
authors = ["Fenhl <fenhl@fenhl.net>"]
edition = "2018"

[lib]
name = "systemd_minecraft"
path = "src/lib.rs"

[[bin]]
name = "minecraft"
path = "src/main.rs"
doc = false

[dependencies]
async-trait = "0.1"
futures = "0.3"
itertools = "0.10"
serde_json = "1"

[dependencies.derive_more]
version = "0.99"
default-features = false
features = ["from"]

[dependencies.rcon]
version = "0.6"
features = ["rt-tokio"]

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["json", "rustls-tls", "stream", "trust-dns"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.structopt]
version = "0.3"
features = ["paw"]

[dependencies.tokio]
version = "1"
features = ["fs", "macros", "process", "rt-multi-thread"]

[dependencies.tokio-stream]
version = "0.1"
features = ["io-util"]

[dependencies.tokio-util]
version = "0.6"
features = ["compat"]

[dependencies.url]
version = "2"
features = ["serde"]

[dependencies.wheel]
git = "https://github.com/fenhl/wheel"
branch = "main"

[target.'cfg(unix)'.dependencies]
crossbeam-channel = "0.5"
signal-hook = "0.3"
