[package]
name = "minecraft"
version = "6.1.3"
authors = ["Fenhl <fenhl@fenhl.net>"]
edition = "2021"

[lib]
name = "systemd_minecraft"
path = "src/lib.rs"

[[bin]]
name = "minecraft"
path = "src/main.rs"
doc = false

[dependencies]
async-trait = "0.1"
clap = { version = "4.3.16", features = ["derive"] }
futures = "0.3"
itertools = "0.12"
rcon = { version = "0.6", features = ["rt-tokio"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "stream", "trust-dns"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1.0.43"
tokio = { version = "1", features = ["fs", "macros", "process", "rt-multi-thread"] }
tokio-stream = { version = "0.1", features = ["io-util"] }
tokio-util = { version = "0.7", features = ["compat"] }
url = { version = "2", features = ["serde"] }
wheel = { git = "https://github.com/fenhl/wheel", branch = "main" }

[target.'cfg(unix)'.dependencies]
crossbeam-channel = "0.5"
signal-hook = "0.3"
